--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,7 @@
     --color-secondary: #CBD5E1;
 
     --font-family: 'Archivo', sans-serif;
-    --h1: 800 24/135% var(--font-family);
+    --h1: 800 24px/135% var(--font-family);
     --h2: 800 16px/140% var(--font-family);
     --h3: 800 14px/140% var(--font-family);
     --text-span: 600 16/145% var(--font-family);
@@ -39,4 +39,16 @@ a:hover{
 
 h1, h2, h3{
     color: inherit;
+}
+
+.grid{
+    display: grid;
+}
+.grid-col{
+    grid-auto-flow: column;
+}
+.container{
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline : auto;
 }
