--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,5 @@
 @import url('global.css');
-
-h1{
-    color: var(--brand-color-light);
-    font-size: 24px;
-}
+@import url('header.css');
 
 
-#topnav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.nav-item{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-size: 16px;
-    font-weight: bold;
-    gap: 8px;
-    padding: 20px 32px;
-    vertical-align: middle;
-}
 
-#bottomnav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 14px 20px;
-    color: var(--color-secondary);
-    border: 0.01em solid var(--color-secondary);
-}
