--- a/css/global.css
+++ b/css/global.css
@@ -43,10 +43,23 @@ h1, h2, h3{
 img{
     max-width: 100%;
 }
+
+.content-tag{
+    display: inline-block;
+    background: var(--brand-color-dark);
+    padding: 4px 8px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    margin-bottom: 8px;
+    box-shadow: 0px 4px 16px rgba(2, 6, 23, 25%) ;
+}
+
 .container{
     max-width: 1280px;
     padding-inline: 32px;
     margin-inline : auto;
+
 }
 main{
     margin-top: 40px;
